--- a/Footer/footer.css
+++ b/Footer/footer.css
@@ -1,7 +1,7 @@
 .footer{
     background-color: rgba(0, 0, 0, 0.76);
     width: 100vw;
-    height: 100vh;
+    height:80vh;
 }
 
 
@@ -42,12 +42,18 @@
     }
 
     .contactUs span{
-        font-size: 20px;
+        font-size: 25px;
     }
 
     .gmap_iframe {
         width: 100vw;
         height:266px!important;
+    }
+
+    .footer{
+        background-color: rgba(0, 0, 0, 0.76);
+        width: 100vw;
+        height:80vh;
     }
 }
 
@@ -59,11 +65,17 @@
     }
 
     .contactUs span{
-        font-size: 10px;
+        font-size: 25px;
     }
 
     .gmap_iframe {
         width: 100vw;
         height:166px!important;
+    }
+
+    .footer{
+        background-color: rgba(0, 0, 0, 0.76);
+        width: 100vw;
+        height:50vh;
     }
 }
